Bug fixes and new barcode

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         <div id="obstical">
             <img src="image/barcode.png">
         </div>
+        <div id="obstical-large">
+            <img src="image/barcode_large.png">
+        </div>
+        <div id="tip">
+            <p>Space to jump. You can tripple jump!</p>
+        </div>
     </section>
 
     <section id="question-section">
