--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="image/barcode_large.png">
         </div>
         <div id="tip">
-            <p>Space to jump. You can tripple jump!</p>
+            <p>Space or click to jump. You can tripple jump!</p>
         </div>
     </section>
 
