--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <section class="game">
         <h1 id="score">0</h1>
         <div id="player"></div>
+        <div id="scan"></div>
+        <div id="cover"></div>
         <hr id="line">
         <div id="obstical">
             <img src="image/barcode.png">
