--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="image/barcode_large.png">
         </div>
         <div id="tip">
-            <p>Space or click to jump. You can tripple jump!</p>
+            <p id="tip-p">Space or click to jump. You can tripple jump!</p>
         </div>
     </section>
 
